# SincereSingularities

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yaml
src/sincere_singularities/: __init__.py  __main__.py  bot.py  restaurant.py  restaurants_view.py  utils.py
src/sincere_singularities/data/: db.py  extra_informations.py  extra_wishes.py  intros_outros.py  noise.py  order.py  orders.json  restaurant.py  restaurants.json  savestates.py  states.json
src/sincere_singularities/modules/: coins.py  conditions.py  order.py  order_generator.py  order_queue.py  points.py  restaurant.py  restaurants_view.py  sentiment_analysis.py
